parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program NEWLINE statement
Rule 3     program -> program SEMICOLON statement
Rule 4     statement -> expression
Rule 5     statement -> IDENTIFIER ASSIGN expression
Rule 6     statement -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
Rule 7     statement -> PRINT LPAREN expression RPAREN
Rule 8     statement -> PRINT LPAREN STRING RPAREN
Rule 9     statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 10    statement -> IF LPAREN expression RPAREN statement
Rule 11    statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement
Rule 12    statement -> WHILE LPAREN expression RPAREN statement
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression MOD expression
Rule 18    expression -> expression LT expression
Rule 19    expression -> IDENTIFIER LBRACKET expression RBRACKET
Rule 20    expression -> NUMBER
Rule 21    expression -> IDENTIFIER
Rule 22    expression -> LPAREN expression RPAREN
Rule 23    expression -> SIN LPAREN expression RPAREN
Rule 24    expression -> COS LPAREN expression RPAREN
Rule 25    expression -> TAN LPAREN expression RPAREN
Rule 26    expression -> COSEC LPAREN expression RPAREN
Rule 27    expression -> SEC LPAREN expression RPAREN
Rule 28    expression -> COT LPAREN expression RPAREN
Rule 29    expression -> expression EQUALS expression

Terminals, with rules where they appear

ASSIGN               : 5 6
COS                  : 24
COSEC                : 26
COT                  : 28
DIVIDE               : 16
ELSE                 : 9
EQUALS               : 29
FOR                  : 11
IDENTIFIER           : 5 6 19 21
IF                   : 9 10
LBRACKET             : 6 19
LPAREN               : 7 8 9 10 11 12 22 23 24 25 26 27 28
LT                   : 18
MINUS                : 14
MOD                  : 17
NEWLINE              : 2
NUMBER               : 20
PLUS                 : 13
PRINT                : 7 8
RBRACKET             : 6 19
RPAREN               : 7 8 9 10 11 12 22 23 24 25 26 27 28
SEC                  : 27
SEMICOLON            : 3 11 11
SIN                  : 23
STRING               : 8
TAN                  : 25
TIMES                : 15
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 6 7 9 10 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 22 23 24 25 26 27 28 29 29
program              : 2 3 0
statement            : 1 2 3 9 9 10 11 11 11 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program NEWLINE statement
    (3) program -> . program SEMICOLON statement
    (4) statement -> . expression
    (5) statement -> . IDENTIFIER ASSIGN expression
    (6) statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . PRINT LPAREN STRING RPAREN
    (9) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement
    (12) statement -> . WHILE LPAREN expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3

state 1

    (0) S' -> program .
    (2) program -> program . NEWLINE statement
    (3) program -> program . SEMICOLON statement

    NEWLINE         shift and go to state 17
    SEMICOLON       shift and go to state 18


state 2

    (1) program -> statement .

    NEWLINE         reduce using rule 1 (program -> statement .)
    SEMICOLON       reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (4) statement -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . MOD expression
    (18) expression -> expression . LT expression
    (29) expression -> expression . EQUALS expression

    NEWLINE         reduce using rule 4 (statement -> expression .)
    SEMICOLON       reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    ELSE            reduce using rule 4 (statement -> expression .)
    RPAREN          reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 23
    LT              shift and go to state 24
    EQUALS          shift and go to state 25


state 4

    (5) statement -> IDENTIFIER . ASSIGN expression
    (6) statement -> IDENTIFIER . LBRACKET expression RBRACKET ASSIGN expression
    (19) expression -> IDENTIFIER . LBRACKET expression RBRACKET
    (21) expression -> IDENTIFIER .

    ASSIGN          shift and go to state 26
    LBRACKET        shift and go to state 27
    PLUS            reduce using rule 21 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 21 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 21 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 21 (expression -> IDENTIFIER .)
    MOD             reduce using rule 21 (expression -> IDENTIFIER .)
    LT              reduce using rule 21 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 21 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 21 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 21 (expression -> IDENTIFIER .)
    $end            reduce using rule 21 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 21 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 21 (expression -> IDENTIFIER .)


state 5

    (7) statement -> PRINT . LPAREN expression RPAREN
    (8) statement -> PRINT . LPAREN STRING RPAREN

    LPAREN          shift and go to state 28


state 6

    (22) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 29

state 7

    (9) statement -> IF . LPAREN expression RPAREN statement ELSE statement
    (10) statement -> IF . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 31


state 8

    (11) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    LPAREN          shift and go to state 32


state 9

    (12) statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 33


state 10

    (20) expression -> NUMBER .

    PLUS            reduce using rule 20 (expression -> NUMBER .)
    MINUS           reduce using rule 20 (expression -> NUMBER .)
    TIMES           reduce using rule 20 (expression -> NUMBER .)
    DIVIDE          reduce using rule 20 (expression -> NUMBER .)
    MOD             reduce using rule 20 (expression -> NUMBER .)
    LT              reduce using rule 20 (expression -> NUMBER .)
    EQUALS          reduce using rule 20 (expression -> NUMBER .)
    NEWLINE         reduce using rule 20 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 20 (expression -> NUMBER .)
    $end            reduce using rule 20 (expression -> NUMBER .)
    RPAREN          reduce using rule 20 (expression -> NUMBER .)
    ELSE            reduce using rule 20 (expression -> NUMBER .)
    RBRACKET        reduce using rule 20 (expression -> NUMBER .)


state 11

    (23) expression -> SIN . LPAREN expression RPAREN

    LPAREN          shift and go to state 34


state 12

    (24) expression -> COS . LPAREN expression RPAREN

    LPAREN          shift and go to state 35


state 13

    (25) expression -> TAN . LPAREN expression RPAREN

    LPAREN          shift and go to state 36


state 14

    (26) expression -> COSEC . LPAREN expression RPAREN

    LPAREN          shift and go to state 37


state 15

    (27) expression -> SEC . LPAREN expression RPAREN

    LPAREN          shift and go to state 38


state 16

    (28) expression -> COT . LPAREN expression RPAREN

    LPAREN          shift and go to state 39


state 17

    (2) program -> program NEWLINE . statement
    (4) statement -> . expression
    (5) statement -> . IDENTIFIER ASSIGN expression
    (6) statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . PRINT LPAREN STRING RPAREN
    (9) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement
    (12) statement -> . WHILE LPAREN expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    statement                      shift and go to state 40
    expression                     shift and go to state 3

state 18

    (3) program -> program SEMICOLON . statement
    (4) statement -> . expression
    (5) statement -> . IDENTIFIER ASSIGN expression
    (6) statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . PRINT LPAREN STRING RPAREN
    (9) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement
    (12) statement -> . WHILE LPAREN expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    statement                      shift and go to state 41
    expression                     shift and go to state 3

state 19

    (13) expression -> expression PLUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 42

state 20

    (14) expression -> expression MINUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 43

state 21

    (15) expression -> expression TIMES . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 44

state 22

    (16) expression -> expression DIVIDE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 45

state 23

    (17) expression -> expression MOD . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 46

state 24

    (18) expression -> expression LT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 47

state 25

    (29) expression -> expression EQUALS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 48

state 26

    (5) statement -> IDENTIFIER ASSIGN . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 49

state 27

    (6) statement -> IDENTIFIER LBRACKET . expression RBRACKET ASSIGN expression
    (19) expression -> IDENTIFIER LBRACKET . expression RBRACKET
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 50

state 28

    (7) statement -> PRINT LPAREN . expression RPAREN
    (8) statement -> PRINT LPAREN . STRING RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    STRING          shift and go to state 52
    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 51

state 29

    (22) expression -> LPAREN expression . RPAREN
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . MOD expression
    (18) expression -> expression . LT expression
    (29) expression -> expression . EQUALS expression

    RPAREN          shift and go to state 53
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 23
    LT              shift and go to state 24
    EQUALS          shift and go to state 25


state 30

    (19) expression -> IDENTIFIER . LBRACKET expression RBRACKET
    (21) expression -> IDENTIFIER .

    LBRACKET        shift and go to state 54
    RPAREN          reduce using rule 21 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 21 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 21 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 21 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 21 (expression -> IDENTIFIER .)
    MOD             reduce using rule 21 (expression -> IDENTIFIER .)
    LT              reduce using rule 21 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 21 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 21 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 21 (expression -> IDENTIFIER .)
    $end            reduce using rule 21 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 21 (expression -> IDENTIFIER .)
    RBRACKET        reduce using rule 21 (expression -> IDENTIFIER .)


state 31

    (9) statement -> IF LPAREN . expression RPAREN statement ELSE statement
    (10) statement -> IF LPAREN . expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 55

state 32

    (11) statement -> FOR LPAREN . statement SEMICOLON expression SEMICOLON statement RPAREN statement
    (4) statement -> . expression
    (5) statement -> . IDENTIFIER ASSIGN expression
    (6) statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . PRINT LPAREN STRING RPAREN
    (9) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement
    (12) statement -> . WHILE LPAREN expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    statement                      shift and go to state 56
    expression                     shift and go to state 3

state 33

    (12) statement -> WHILE LPAREN . expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression LT expression
    (19) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (20) expression -> . NUMBER
    (21) expression -> . IDENTIFIER
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . SIN LPAREN expression RPAREN
    (24) expression -> . COS LPAREN expression RPAREN
    (25) expression -> . TAN LPAREN expression RPAREN
    (26) expression -> . COSEC LPAREN expression RPAREN
    (27) expression -> . SEC LPAREN expression RPAREN
    (28) expression -> . COT LPAREN expression RPAREN
    (29) expression -> . expression EQUALS expression

    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 10
    LPAREN          shift and go to state 6
    SIN             shift and go to state 11
    COS             shift and go to state 12
    TAN             shift and go to state 13
    COSEC           shift and go to state 14
    SEC             shift and go to state 15
    COT             shift and go to state 16

    expression                     shift and go to state 57

state 34
